--- a/tests/index.html
+++ b/tests/index.html
@@ -10,6 +10,7 @@
     <!-- 2. Use an HTML Import to bring in some elements. -->
     <!-- <link href="../elements/diverge-app.html" rel="import"> -->
     <link href="../elements/ki-app.html" rel="import">
+    <link href="../elements/ki-storm.html" rel="import">
     <!-- <script src="./init.js"></script> -->
 
     <style>
