--- a/elements/diverge/diverge-app.html
+++ b/elements/diverge/diverge-app.html
@@ -158,7 +158,7 @@
         width: 300px;
     }
 
-    *@media (max-width:375px) {
+    @media (max-width:375px) {
         #divText {
             width: 200px;
         }
@@ -185,14 +185,7 @@
                 </div>
             </paper-dialog>
 
-            <paper-dialog id="newDiverge" with-backdrop>
-                <h2>Create a new Diverge</h2>
-                <paper-textarea id="divText" label="New Diverge.." autofocus></paper-textarea>
-                <div class="buttons">
-                    <paper-button dialog-dismiss>Cancel</paper-button>
-                    <paper-button on-tap="postDiverge">Create</paper-button>
-                </div>
-            </paper-dialog>
+
 
             <firebase-document
                 id="counterRef"
@@ -215,7 +208,7 @@
                         </paper-material>
                     </template>
 
-                    <template is="dom-repeat" items="{{diverges}}" as="diverge">
+                    <template is="dom-repeat" items="{{diverges}}" as="diverge" filter="isOwnIdeaOrSearch">
                         <script type="text/javascript">
                             //console.log({{this.diverges}});
                             // var comments = this.diverge.comments;
@@ -227,6 +220,14 @@
 
             </div>
             <paper-fab class="add" icon="icons:add" on-tap="doNew" elevation="3" mini="{{smallScreen}}"></paper-fab>
+            <paper-dialog id="newDiverge" with-backdrop>
+                <h2>Create a new Diverge</h2>
+                <paper-textarea id="divText" label="New Diverge.." autofocus></paper-textarea>
+                <div class="buttons">
+                    <paper-button dialog-dismiss>Cancel</paper-button>
+                    <paper-button on-tap="postDiverge">Create</paper-button>
+                </div>
+            </paper-dialog>
         </div>
     </template>
 </dom-module>
@@ -239,6 +240,11 @@ Polymer({
         dbref: String,
         token: String,
 
+        search: String,
+        ownIdeaOnly: {
+            type: Boolean,
+            value: false
+        },
         description: String,
         diverges: Array,
         counter: Number,
@@ -270,6 +276,17 @@ Polymer({
     },
     diverges_URL: function(dbref) {
         return dbref+"/diverges";
+    },
+    isOwnIdeaOrSearch: function(item) {
+        console.log("Filter");
+        console.log(this.ownIdeaOnly);
+        if (this.ownIdeaOnly) {
+            console.log("User"+item.user);
+            console.log("UID"+this.uid);
+            return item.user == this.uid;
+        } else {
+            return true;
+        }
     },
     doNew: function(e) {
         this.$.newDiverge.open();
